@@ -48,6 +48,8 @@ o Nicer default cover image
 Depends on other components:
 ============================
 
+o Cleanup window parenting mess
+  Depends on Gtk#, Ximian Bugzilla #54866
 o Directly use Pango# instead of using pango-utils.c
   Depends on Gtk#, Ximian Bugzilla #52575
 o Monitor imported folders using FileWatcher
